rajout des liens stylisés footer/aside

--- a/article.html
+++ b/article.html
@@ -247,28 +247,28 @@
           </div>
           <div class="d-none d-sm-block mx-4 mt-4">
             <p class="titre-aside">Du même auteur</p>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Critique] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Dossier] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Dossier] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Interview] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Interview] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Critique] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Critique] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
           </div>
           <div class="d-none d-sm-block mx-4 mt-4">
             <p class="titre-aside">Articles similaires</p>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Critique] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Dossier] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Dossier] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Interview] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Interview] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Critique] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
+            <p class="titreArticle"><a href="article.html">[Critique] Titre de l'article</a></p>
             <small class="petits-titres-aside">Publié le 22/04/2018</small>
           </div>
         </div>
@@ -283,7 +283,7 @@
       <div class="row justify-content-between">
         <div class="col-xs-12 col-sm-3 mt-2">
           <nav class="nav d-flex flex-column menu-footer">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
             <a class="nav-link" href="#">À propos</a>
             <a class="nav-link" href="#">Mentions légales</a>
           </nav>
@@ -305,10 +305,10 @@
         </div>
         <div class="d-none d-sm-block col-sm-3">
           <p class="partenaires">Nos partenaires :</p>
-          <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png">
-          <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png">
-          <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png">
-          <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png">
+          <a href="https://www.gaumont.fr"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png"></a>
+          <a href="https://www.lesinrocks.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png"></a>
+          <a href="https://www.ugc.fr/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png"></a>
+          <a href="https://www.cahiersducinema.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png"></a>
         </div>
       </div>
     </div>
