--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
             <div class="row justify-content-between">
                 <div class="col-xs-12 col-sm-3 mt-2">
                     <nav class="nav d-flex flex-column menu-footer">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                         <a class="nav-link" href="#">À propos</a>
                         <a class="nav-link" href="#">Mentions légales</a>
                     </nav>
@@ -132,11 +132,11 @@
                 </div>
                 <div class="d-none d-sm-block col-sm-3">
                     <p class="partenaires">Nos partenaires :</p>
-                    <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png">
-                    <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png">
-                    <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png">
-                    <img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png">
-                </div>
+                    <a href="https://www.gaumont.fr"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png"></a>
+                    <a href="https://www.lesinrocks.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png"></a>
+                    <a href="https://www.ugc.fr/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png"></a>
+                    <a href="https://www.cahiersducinema.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png"></a>
+                  </div>
             </div>
         </div>
     </footer>
