espacement items navbar responsive + target blank footer

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active px-4">
+          <li class="nav-item active ">
             <a class="nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown px-4">
+          <li class="nav-item dropdown ">
             <a class="nav-link dropdown-toggle" href="#" id="dropdownCritiques" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Critiques
@@ -42,7 +42,7 @@
               <a class="dropdown-item" href="article.html">Dessins animés</a>
             </div>
           </li>
-          <li class="nav-item dropdown px-4">
+          <li class="nav-item dropdown ">
             <a class="nav-link dropdown-toggle" href="#" id="dropdownDossiers" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Dossiers
@@ -53,10 +53,10 @@
               <a class="dropdown-item" href="article.html">Dessins animés</a>
             </div>
           </li>
-          <li class="nav-item px-4">
+          <li class="nav-item ">
             <a class="nav-link" href="#">A propos</a>
           </li>
-          <li class="nav-item px-4">
+          <li class="nav-item ">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
@@ -661,10 +661,10 @@
         </div>
         <div class="d-none d-sm-block col-sm-3">
           <p class="partenaires">Nos partenaires :</p>
-          <a href="https://www.gaumont.fr"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png"></a>
-          <a href="https://www.lesinrocks.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png"></a>
-          <a href="https://www.ugc.fr/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png"></a>
-          <a href="https://www.cahiersducinema.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png"></a>
+          <a target="_blank" href="https://www.gaumont.fr"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png"></a>
+          <a target="_blank" href="https://www.lesinrocks.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png"></a>
+          <a target="_blank" href="https://www.ugc.fr/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png"></a>
+          <a target="_blank" href="https://www.cahiersducinema.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png"></a>
         </div>
       </div>
     </div>
