carousel + boutons + shadow + autres

--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block img-fluid w-100" src="images/au_poste-banner.jpg" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-              <h5>Au poste : la nouvelle comédie de Quentin Dupieux</h5>
+          <div class="carousel-caption">
+            <p><span class="crochets">[Critique]</span> Au poste : la nouvelle comédie de Quentin Dupieux</p>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block img-fluid w-100" src="images/peakyblinders2.jpg" alt="Third slide">
-          <div class="carousel-caption d-none d-md-block">
-              <h5>Peaky Blinders : que nous reserve la prochaine saison ?</h5>
+          <div class="carousel-caption">
+            <p><span class="crochets">[Dossier]</span> Peaky Blinders : que nous reserve la prochaine saison ?</p>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block img-fluid w-100" src="images/chihiro2-banner.jpg" alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
-              <h5>Miyazaki : retour sur une carrière</h5>
+          <div class="carousel-caption">
+            <p><span class="crochets">[Rétro]</span> Miyazaki : retour sur une carrière</p>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
     <section class="container-fluid containerContent">
       <article class="row">
         <header class="col-10 offset-1 mt-5 mb-4">
-          <h2 class="mb-4"><span class="crochets">[</span> Derniers articles <span class="crochets">]</span></h2>
+          <h2 class="mb-4 derniers"><span class="crochets">[</span> Derniers articles <span class="crochets">]</span></h2>
         </header>
         <div class="card-deck containerCardDeck mx-auto w-75 col-9">
           <div class="card carte">
@@ -598,29 +598,29 @@
       </div>
       <div class="mt-5 px-3">
         <p class="titre-aside">Articles les plus consultés</p>
-        <p class="titreArticle">[Critique] Titre de l'article</p>
+        <p class="titreArticle">[Critique] Le dernier roi d'Ecosse</p>
         <small class="petits-titres-aside">Publié le 22/04/2018</small>
-        <p class="titreArticle">[Dossier] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
-        <p class="titreArticle">[Interview] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
-        <p class="titreArticle">[Critique] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
-        <p class="titreArticle">[Critique] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
+        <p class="titreArticle">[Dossier] La musique au cinéma</p>
+        <small class="petits-titres-aside">Publié le 28/07/2018</small>
+        <p class="titreArticle">[Interview] Steven Spielberg</p>
+        <small class="petits-titres-aside">Publié le 01/02/2018</small>
+        <p class="titreArticle">[Critique] Mamma Mia</p>
+        <small class="petits-titres-aside">Publié le 25/11/2017</small>
+        <p class="titreArticle">[Critique] Grey's Anatomy</p>
+        <small class="petits-titres-aside">Publié le 06/02/2018</small>
       </div>
       <div class="mt-5 px-3">
         <p class="titre-aside">Articles les plus commentés</p>
-        <p class="titreArticle">[Critique] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
-        <p class="titreArticle">[Dossier] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
-        <p class="titreArticle">[Interview] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
-        <p class="titreArticle">[Critique] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
-        <p class="titreArticle">[Critique] Titre de l'article</p>
-        <small class="petits-titres-aside">Publié le 22/04/2018</small>
+        <p class="titreArticle">[Critique] Charmed le reboot</p>
+        <small class="petits-titres-aside">Publié le 22/03/2018</small>
+        <p class="titreArticle">[Dossier] L'affaire Weinstein #metoo</p>
+        <small class="petits-titres-aside">Publié le 20/05/2017</small>
+        <p class="titreArticle">[Interview] Jean Dujardin</p>
+        <small class="petits-titres-aside">Publié le 15/03/2018</small>
+        <p class="titreArticle">[Critique] Harry Potter</p>
+        <small class="petits-titres-aside">Publié le 01/06/2018</small>
+        <p class="titreArticle">[Critique] D'après une histoire vraie</p>
+        <small class="petits-titres-aside">Publié le 20/09/2018</small>
       </div>
       <div class="mt-5 px-3" id="coeur">
         <p class="titre-aside">Coup de coeur</p>
