--- a/article.html
+++ b/article.html
@@ -155,10 +155,10 @@
                 mais au moins reconnaître le
                 panache de l’aventure. </p>
               <p class="card-text"><small class="petits-tittres">Modifié il y 3 minutes</small></p>
-              <button type="button" class="btn mt-2 tags">Le grand détournement</button>
-              <button type="button" class="btn mt-2 tags">La classe américaine</button>
+              <button type="button" class="btn mt-2 tags">Wes Anderson</button>
+              <button type="button" class="btn mt-2 tags">Moonrise Kingdom</button>
               <button type="button" class="btn mt-2 tags">Comédie</button>
-              <button type="button" class="btn mt-2 tags">Tags</button>
+              <button type="button" class="btn mt-2 tags">Drame</button>
               <h5 class="mt-4">Bande annonce</h5>
               <div class="embed-responsive embed-responsive-16by9 mt-3">
                 <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/_eOI3AamSm8"
@@ -247,29 +247,29 @@
           </div>
           <div class="d-none d-sm-block mx-4 mt-4">
             <p class="titre-aside">Du même auteur</p>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Dossier] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Interview] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] Mission impossible</p>
+            <small class="petits-titres-aside">Publié le 22/02/2018</small>
+            <p class="titreArticle">[Dossier] La virilité au cinéma</p>
+            <small class="petits-titres-aside">Publié le 10/06/2018</small>
+            <p class="titreArticle">[Interview] James Dean</p>
+            <small class="petits-titres-aside">Publié le 09/03/1958</small>
+            <p class="titreArticle">[Critique] Un jour</p>
+            <small class="petits-titres-aside">Publié le 01/10/2017</small>
+            <p class="titreArticle">[Critique] Le pianiste</p>
+            <small class="petits-titres-aside">Publié le 02/06/2018</small>
           </div>
           <div class="d-none d-sm-block mx-4 mt-4">
             <p class="titre-aside">Articles similaires</p>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Dossier] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Interview] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
-            <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-titres-aside">Publié le 22/04/2018</small>
+            <p class="titreArticle">[Critique] The grand Budapest hotel</p>
+            <small class="petits-titres-aside">Publié le 20/05/2018</small>
+            <p class="titreArticle">[Dossier] Walt Disney</p>
+            <small class="petits-titres-aside">Publié le 11/06/2018</small>
+            <p class="titreArticle">[Interview] Scarlett Johansson</p>
+            <small class="petits-titres-aside">Publié le 02/01/2018</small>
+            <p class="titreArticle">[Critique] How I met your mother</p>
+            <small class="petits-titres-aside">Publié le 12/012/2017</small>
+            <p class="titreArticle">[Critique] Forest Gump</p>
+            <small class="petits-titres-aside">Publié le 06/07/2018</small>
           </div>
         </div>
       </div>
