Commit pre-pull Nelson image social hover

--- a/article.html
+++ b/article.html
@@ -165,8 +165,8 @@
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
               <div class="mt-2 d-flex flex-row justify-content-end boutons-partage">
-                <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid" src="images/facebookv2.png"></a>
-                <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid" src="images/twitterv2.png"></a>
+                  <a class="facebookStatic nav-link mx-2" href="https://facebook.com" target="_blank"></a>
+                  <a class="twitterStatic nav-link mx-2" href="https://twitter.com" target="_blank"></a>
               </div>
               <h4 class="mt-4">Commentaires</h4>
               <hr />
@@ -292,11 +292,10 @@
           <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
           <div>
             <nav class="d-flex flex-row justify-content-center mt-1">
-              <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid" src="images/facebook.png"
-                  width="150%"></a>
-              <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid" src="images/twitter.png"></a>
-              <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
-              <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid" src="images/youtube.png"></a>
+              <a class="facebook nav-link mx-2" href="https://facebook.com" target="_blank"></a>
+              <a class="twitter nav-link mx-2" href="https://twitter.com" target="_blank"></a>
+              <a class="instagram nav-link mx-2" href="https://instagram.com" target="_blank"></a>
+              <a class="youtube nav-link mx-2" href="https://youtube.com" target="_blank"></a>
             </nav>
           </div>
           <div>
