--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <button type="button" class="btn btn-light border-ligth">Articles plus anciens</button>
       </div>
       <div id="ArticleSup" style="display:none;" class="answer_list">
-        <section class="container-fluid px-0 containerContent">
+        <section class="container-fluid px-0 pt-O mt-0 containerContent">
           <article class="row">
             <div class="card-deck containerCardDeck mx-auto w-75 col-9">
               <div class="card carte">
@@ -550,10 +550,10 @@
       <div id="newsletter">
         <div>
           <nav class="d-flex flex-row justify-content-center my-3 mt-5">
-            <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid linkAsideSocial socialFacebook" src="images/facebook.png"></a>
-            <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid linkAsideSocial socialTwitter" src="images/twitter.png"></a>
-            <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid linkAsideSocial socialInstagram" src="images/Instagram.png"></a>
-            <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid linkAsideSocial socialYoutube" src="images/youtube.png"></a>
+            <a class="facebook nav-link mx-2" href="https://facebook.com" target="_blank"></a>
+            <a class="twitter nav-link mx-2" href="https://twitter.com" target="_blank"></a>
+            <a class="instagram nav-link mx-2" href="https://instagram.com" target="_blank"></a>
+            <a class="youtube nav-link mx-2" href="https://youtube.com" target="_blank"></a>
           </nav>
         </div>
         <div class="card form-group mx-3 mt-5">
@@ -633,7 +633,6 @@
       </div>
     </aside>
   </section>
-
   <!-- Footer -->
   <footer>
     <div class="container-fluid pt-3 bg-dark">
@@ -649,10 +648,10 @@
           <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
           <div>
             <nav class="d-flex flex-row justify-content-center mt-1">
-              <a class="nav-link" href="https://facebook.com"><img alt="" id ="imageFacebook" class="img-fluid socialFacebook" src="images/facebook.png" onmouseover="changeImgHover()"></a>
-              <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid socialTwitter" src="images/twitter.png"></a>
-              <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid socialInstagram" src="images/Instagram.png"></a>
-              <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid socialYoutube" src="images/youtube.png"></a>
+              <a class="facebook nav-link mx-2" href="https://facebook.com" target="_blank"></a>
+              <a class="twitter nav-link mx-2" href="https://twitter.com" target="_blank"></a>
+              <a class="instagram nav-link mx-2" href="https://instagram.com" target="_blank"></a>
+              <a class="youtube nav-link mx-2" href="https://youtube.com" target="_blank"></a>
             </nav>
           </div>
           <div>
