--- a/contact.html
+++ b/contact.html
@@ -120,11 +120,11 @@
                     <div><img alt="" class="img-fluid" src="images/wild-review.png"></div>
                     <div>
                         <nav class="d-flex flex-row justify-content-center mt-1">
-                            <a class="nav-link" href="https://facebook.com"><img alt="" class="img-fluid" src="images/facebook.png"></a>
-                            <a class="nav-link" href="https://twitter.com"><img alt="" class="img-fluid" src="images/twitter.png"></a>
-                            <a class="nav-link" href="https://instagram.com"><img alt="" class="img-fluid" src="images/Instagram.png"></a>
-                            <a class="nav-link" href="https://youtube.com"><img alt="" class="img-fluid" src="images/youtube.png"></a>
-                        </nav>
+                            <a class="facebook nav-link mx-2" href="https://facebook.com" target="_blank"></a>
+                            <a class="twitter nav-link mx-2" href="https://twitter.com" target="_blank"></a>
+                            <a class="instagram nav-link mx-2" href="https://instagram.com" target="_blank"></a>
+                            <a class="youtube nav-link mx-2" href="https://youtube.com" target="_blank"></a>
+                          </nav>
                     </div>
                     <div>
                         <p class="d-flex justify-content-center mt-2 rights">© All Rights Reserved</p>
@@ -149,50 +149,6 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
-    <!--API Youtube-->
-    <script>
-        // 2. This code loads the IFrame Player API code asynchronously.
-        var tag = document.createElement('script');
-
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-        // 3. This function creates an <iframe> (and YouTube player)
-        //    after the API code downloads.
-        var player;
-        function onYouTubeIframeAPIReady() {
-            player = new YT.Player('player', {
-                width: "100%",
-                height: "100%",
-                videoId: 'OV_unfdZYP4',
-                events: {
-                    //'onReady': onPlayerReady,
-                    'onStateChange': onPlayerStateChange,
-                }
-            });
-        }
-
-        // 4. The API will call this function when the video player is ready.
-        function onPlayerReady(event) {
-            event.target.playVideo();
-        }
-
-        // 5. The API calls this function when the player's state changes.
-        //    The function indicates that when playing a video (state=1),
-        //    the player should play for six seconds and then stop.
-        var done = false;
-        function onPlayerStateChange(event) {
-            if (event.data == YT.PlayerState.PLAYING && !done) {
-                //setTimeout(stopVideo, 6000);
-                done = true;
-            }
-        }
-        function stopVideo() {
-            player.stopVideo();
-        }
-    </script>
 </body>
 
 </html>
