--- a/contact.html
+++ b/contact.html
@@ -131,11 +131,11 @@
                     </div>
                 </div>
                 <div class="d-none d-sm-block col-sm-3">
-                    <p class="partenaires">Nos partenaires :</p>
-                    <a target="_blank" href="https://www.gaumont.fr"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/gaumont.png"></a>
-                    <a target="_blank" href="https://www.lesinrocks.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/inrock.png"></a>
-                    <a target="_blank" href="https://www.ugc.fr/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/ugc.png"></a>
-                    <a target="_blank" href="https://www.cahiersducinema.com/"><img alt="" class="img-fluid logos-partenaires mx-2 mt-2" src="images/cahiers.png"></a>
+                    <p class="partenaires mb-4">Nos partenaires :</p>
+                    <a target="_blank" href="https://www.gaumont.fr"><img alt="" class="img-fluid logos-partenaires mx-3 mt-2" src="images/gaumont.png"></a>
+                    <a target="_blank" href="https://www.lesinrocks.com/"><img alt="" class="img-fluid logos-partenaires mx-3 mt-2" src="images/inrock.png"></a>
+                    <a target="_blank" href="https://www.ugc.fr/"><img alt="" class="img-fluid logos-partenaires mx-3 mt-2" src="images/ugc.png"></a>
+                    <a target="_blank" href="https://www.cahiersducinema.com/"><img alt="" class="img-fluid logos-partenaires mx-3 mt-2" src="images/cahiers.png"></a>
                   </div>
             </div>
         </div>
