responsive card pour xs ==> lg

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <header class="col-10 offset-1 mt-5 mb-4">
           <h2 class="mb-4 derniers"><span class="crochets">[</span> Derniers articles <span class="crochets">]</span></h2>
         </header>
-        <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+        <div class="card-deck containerCardDeck mx-auto w-100 col-xs-12 col-lg-9">
           <div class="card carte">
             <img class="card-img-top carteImage" src="images/empereur.jpg" alt="La marche de l'empereur">
             <div class="card-img-overlay cardImageOverlay w-75">
@@ -152,7 +152,7 @@
             </div>
           </div>
         </div>
-        <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+        <div class="card-deck containerCardDeck mx-auto col-xs-12 col-lg-9">
           <div class="card carte">
             <img class="card-img-top carteImage" src="images/stranger-things.jpg" alt="Stranger Things">
             <div class="card-img-overlay cardImageOverlay w-75">
@@ -188,7 +188,7 @@
             </div>
           </div>
         </div>
-        <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+        <div class="card-deck containerCardDeck mx-auto col-xs-12 col-lg-9">
           <div class="card carte">
             <img class="card-img-top carteImage" src="images/sharp-objects.jpg" alt="Sharp Objects">
             <div class="card-img-overlay cardImageOverlay w-75">
@@ -232,7 +232,7 @@
       <div id="ArticleSup" style="display:none;" class="answer_list">
         <section class="container-fluid px-0 pt-O mt-0 containerContent">
           <article class="row">
-            <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+            <div class="card-deck containerCardDeck mx-auto col-xs-12 col-lg-9">
               <div class="card carte">
                 <img class="card-img-top carteImage" src="images/singes.jpg" alt="L'armée des 12 singes">
                 <div class="card-img-overlay cardImageOverlay w-75">
@@ -283,7 +283,7 @@
                 </div>
               </div>
             </div>
-            <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+            <div class="card-deck containerCardDeck mx-auto col-xs-12 col-lg-9">
               <div class="card carte">
                 <img class="card-img-top carteImage" src="images/AttackOnTitanSeason1Cover.jpg" alt="L'Attaque des Titans">
                 <div class="card-img-overlay cardImageOverlay w-75">
@@ -327,7 +327,7 @@
                 </div>
               </div>
             </div>
-            <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+            <div class="card-deck containerCardDeck mx-auto col-xs-12 col-lg-9">
               <div class="card carte">
                 <img class="card-img-top carteImage" src="images/DonnieDarkoCover.jpg" alt="Donnie Darko">
                 <div class="card-img-overlay cardImageOverlay w-75">
@@ -380,7 +380,7 @@
           <div id="ArticleSup2" style="display:none;" class="answer_list">
             <section class="container-fluid px-0 containerContent">
               <article class="row">
-                <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+                <div class="card-deck containerCardDeck mx-auto col-xs-12 col-lg-9">
                   <div class="card carte">
                     <img class="card-img-top carteImage" src="images/singes.jpg" alt="L'armée des 12 singes">
                     <div class="card-img-overlay cardImageOverlay w-75">
@@ -438,7 +438,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+                <div class="card-deck containerCardDeck mx-auto col-xs-12 col-lg-9">
                   <div class="card carte">
                     <img class="card-img-top carteImage" src="images/AttackOnTitanSeason1Cover.jpg" alt="L'Attaque des Titans">
                     <div class="card-img-overlay cardImageOverlay w-75">
@@ -486,7 +486,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-deck containerCardDeck mx-auto w-75 col-9">
+                <div class="card-deck containerCardDeck mx-auto col-xs-12 col-lg-9">
                   <div class="card carte">
                     <img class="card-img-top carteImage" src="images/DonnieDarkoCover.jpg" alt="Donnie Darko">
                     <div class="card-img-overlay cardImageOverlay w-75">
