commit de l'xtrem

--- a/article.html
+++ b/article.html
@@ -75,7 +75,7 @@
     <section class="container-fluid">
       <article class="row">
         <div class="col-12">
-          <div class="card my-4 w-75 mx-auto card-article">
+          <div class="card my-4 mx-auto card-article">
             <img class="card-img-top" src="images/moonrise.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title my-4 titre-article">[Critique] "Moonrise Kingdom" : un film d'aventure euphorique</h5>
@@ -214,7 +214,7 @@
           </div>
         </div>
       </article>
-      <aside class="d-block d-sm-block d-md-none offset-1 col-10 aside-cache mb-4">
+      <aside class="d-block d-sm-block d-md-none offset-1 col-xs-12 col-md-10 aside-cache mb-4 mx-auto">
         <div class="row">
           <div class="col-xs-12 text-center mx-4 mt-4">
             <p class="text-left titre-aside">À propos de l'auteur</p>
