--- a/contact.html
+++ b/contact.html
@@ -73,8 +73,8 @@
         </nav>
     </header>
     <section id="contact" class="container-fluid page-contact">
-        <div class="row w-75 mx-auto py-4">
-            <div class="col-xs-12 col-lg-8 py-4 barre">
+        <div class="row mx-auto py-xs-0 py-md-4">
+            <div class="col-xs-12 col-lg-8 py-4">
                 <div class="contactez">
                     <h2 class="d-flex justify-content-center">Contactez-nous</h2>
                     <p class="contributeur text-center">Et devenez contributeur du blog</p>
